--- a/interlinear.html
+++ b/interlinear.html
@@ -6,7 +6,7 @@
 <style>
 	body {
 		font-family:sans-serif;
-		font-size:14px;
+		font-size:1em;
 		border:0;
 		margin:0;
 		padding:0;
@@ -19,9 +19,13 @@
 		max-width:500px;
 		vertical-align:top;
 	}
-	.main-div {
-		background-color:#fafafa;
+	.main-wrapper {
 		visibility:hidden;		
+	}
+	.main-div {
+		margin:8px;
+		background-color:#fafafa;
+		box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 	}
 	.controls-subdiv {
 		margin:0 8px 0 8px;
@@ -41,27 +45,36 @@
 	table {
 		border-collapse:collapse;
 		border:0;
+		width:100%;
 	}
 	td {
 		border-top:solid 1px lightgray;
-		padding:4px;
+		padding:8px;
 	}
 	td table td {
 		border-top:0;
 	}
-	
+	.top-td {
+		border-top:0;
+		border-bottom:solid 1px lightgray;
+	}
 	.highlighted {
 		color:white;
 		background-color:#004080;
 		border:0;
-		padding:2px;
 	}
 	a {
 		color:#004080;
+		text-decoration:none;
+		padding:1px;
+		border-radius:2px;
+	}
+	a:hover {
+		color:#004080;
+		background-color:lightgray;
 	}
 	a.highlighted {
 		font-weight:bold;
-		border-radius:2px;
 	}
 	td.highlighted, .highlighted td {
 		color:black;
@@ -75,7 +88,7 @@
 <body>
 	<center>
 	
-	<div id="controlsDiv" style="max-width:100%;width:100%;">
+	<div id="controlsDiv" style="max-width:90%;width:90%;">
 	<div class="controls-subdiv">
 	Verse: <input id="book" onchange="refresh()" value="GEN" style="width:80px;">&nbsp;&nbsp;<input id="chap" onchange="refresh()" value="1" style="width:40px;">:<input id="verse" onchange="refresh()" value="1" style="width:40px;"> <br>
 	</div>
@@ -83,11 +96,11 @@
 	Word: <input id="word" onchange="refresh()" value="בְּרֵאשִׁ֖ית">
 	</div>
 	</div>
+	
+	<div id="verseDivWrapper" class="main-wrapper"><div id="verseDiv" class="main-div"></div></div>
 	<a id="verseView"></a>
 	
-	<div id="verseDiv" class="main-div"></div>
-	
-	<div id="wordDiv" class="main-div"></div>
+	<div id="wordDivWrapper" class="main-wrapper"><div id="wordDiv" class="main-div"></div></div>
 	<a id="wordView"></a>
 	
 	<br>
@@ -98,8 +111,13 @@
 <script src="interlinear.js"></script>	
 <script>
 
-	const verseHistory = {};
+	const verseHistory = {};	
 	const wordHistory = {};
+	
+	const rightArrow = '&nbsp;&#10093;&nbsp;';
+	const leftArrow = '&nbsp;&#10092;&nbsp;';
+	const upArrow = '&nbsp;&#x1F781;&nbsp;';
+	const downArrow = '&nbsp;&#x1F783;&nbsp;';
 
 	// building-block functions
 
@@ -177,7 +195,9 @@
 		return key.substring( 0, 1 )+key.substring( len-1, len ); // first+last
 	}
 
-
+	function last ( array ) {
+		return array[array.length-1];
+	}
 
 
 	// structural functions
@@ -190,6 +210,104 @@
 			//return `[NOT FOUND: ${book} ${chap}:${verse}]`;
 			return '';
 		}
+	}
+	
+	function getBooks ( bibleObj ) {
+		if (bibleObj!==undefined) return Object.keys( bibleObj );
+		else return [];
+	}
+	
+	function getChaps ( bibleObj, book ) {
+		if (bibleObj!==undefined && bibleObj[book]!==undefined) return Object.keys( bibleObj[book] );
+		else return [];
+	}
+	
+	function getVerses ( bibleObj, book, chap ) {
+		if (bibleObj!==undefined && bibleObj[book]!==undefined && bibleObj[book][chap]!==undefined) return Object.keys( bibleObj[book][chap] );
+		else return [];
+	}
+	
+	function verseData ( bibleObj, book, chap, verse ) {
+		var prevBook = book;
+		var nextBook = book;
+		var booksArr = getBooks(bibleObj);
+		for (let i=0; i<booksArr.length; i++) {
+			if (book==booksArr[i]) {
+				if (i>0) prevBook=booksArr[i-1];
+				if (i<booksArr.length-1) nextBook=booksArr[i+1];
+				break;
+			}
+		}
+		var chapNum = Number(chap);
+		var lastChapNum = Number(last(getChaps(bibleObj,book)));
+		var verseNum = Number(verse);
+		var lastVerseNum = Number(last(getVerses(bibleObj,book,chap)));
+		
+		var data = {
+			prevVerse: { book:null, chap:null, verse:null },
+			nextVerse: { book:null, chap:null, verse:null }
+		};
+		
+		// next verse
+		if (verseNum+1 > lastVerseNum) {
+			if (chapNum+1 > lastChapNum) {
+				if (nextBook==book) {
+					// do nothing
+					data.nextVerse.book = null;
+					data.nextVerse.chap = null;
+					data.nextVerse.verse = null;
+				} else {
+					// otherwise next book
+					data.nextVerse.book = nextBook;
+					data.nextVerse.chap = '1';
+					data.nextVerse.verse = '1';
+				}
+			} else {
+				// otherwise next chapter
+				data.nextVerse.book = book;
+				data.nextVerse.chap = (chapNum+1).toString();
+				data.nextVerse.verse = '1';
+			}
+		} else {
+			// otherwise next verse
+			data.nextVerse.book = book;
+			data.nextVerse.chap = chap;
+			data.nextVerse.verse = (verseNum+1).toString();
+		}
+		
+		// prev verse
+		if (verseNum-1 < 1) {
+			if (chapNum-1 < 1) {
+				if (prevBook==book) {
+					// do nothing
+					data.prevVerse.book = null;
+					data.prevVerse.chap = null;
+					data.prevVerse.verse = null;
+				} else {
+					// otherwise prev book
+					let prevChap = last(getChaps(bibleObj,prevBook));
+					let prevVerse = last(getVerses(bibleObj,prevBook,prevChap));
+					data.prevVerse.book = prevBook;
+					data.prevVerse.chap = prevChap;
+					data.prevVerse.verse = prevVerse;
+				}
+			} else {
+				// otherwise prev chapter
+				let prevChap = (chapNum-1).toString();
+				let prevVerse = last(getVerses(bibleObj,prevBook,prevChap));
+				data.prevVerse.book = book;
+				data.prevVerse.chap = prevChap;
+				data.prevVerse.verse = prevVerse;
+			}
+		} else {
+			// otherwise prev verse
+			let prevVerse = (verseNum-1).toString();
+			data.prevVerse.book = book;
+			data.prevVerse.chap = chap;
+			data.prevVerse.verse = prevVerse;
+		}
+		
+		return data;
 	}
 	
 	function exactWord ( text, basic ) {
@@ -214,7 +332,7 @@
 				let codeHash = code.substring(0,3);
 				if (codeToReplacement[codeHash]!==undefined && codeToReplacement[codeHash][code]!==undefined) {
 					for (const [rep, repObj] of Object.entries(codeToReplacement[codeHash][code])) {
-						html += "<tr><td>"+code+"</td><td>"+rep+"</td></tr>";
+						html += "<tr><td style=\"font-size:0.7em;color:gray;\">"+code+"</td><td style=\"font-size:0.8em;\">"+rep+"</td></tr>";
 					}
 				}
 			}
@@ -223,40 +341,87 @@
 		return html;
 	}
 	
-	function verseLink ( book, chap, verse ) {
-		if ( getVal("book")==book && getVal("chap")==chap && getVal("verse")==verse )
-			return `<a href="#verseView" onclick="changeVerse('${book}','${chap}','${verse}')" class="highlighted">${book} ${chap}:${verse}</a>`;
-		else
-			return `<a href="#verseView" onclick="changeVerse('${book}','${chap}','${verse}')">${book} ${chap}:${verse}</a>`;
+	function isVerse ( book, chap, verse ) {
+		return ( getVal("book")==book && getVal("chap")==chap && getVal("verse")==verse );
 	}
 	
-	function wordLink ( word ) {
-		if ( basicWord(getVal( "word" )) == basicWord(word) )
-			return `<a href="#wordView" onclick="changeWord('${word}')" class="highlighted">${word}</a>`;
-		else
-			return `<a href="#wordView" onclick="changeWord('${word}')">${word}</a>`;
+	function isWord ( word ) {
+		return ( basicWord(getVal( "word" )) == basicWord(word) );
 	}
 	
+	function verseLink ( book, chap, verse, link ) {
+		if (link==undefined) link = `${book}&nbsp;${chap}:${verse}`;
+		if (isVerse( book, chap, verse ))
+			return `<a href="#verseView" onclick="changeVerse('${book}','${chap}','${verse}')" class="highlighted">${link}</a>`;
+		else
+			return `<a href="#verseView" onclick="changeVerse('${book}','${chap}','${verse}')">${link}</a>`;
+	}
+	
+	function wordLink ( word, link ) {
+		if (link==undefined) link = word;
+		if (isWord( word ))
+			return `<a href="#wordView" onclick="changeWord('${word}')" class="highlighted">${link}</a>`;
+		else
+			return `<a href="#wordView" onclick="changeWord('${word}')">${link}</a>`;
+	}
+	
+	function grayedOut ( icon ) {
+		return '<span style="color:lightgray;">'+icon+'</span>';
+	}
+	
+	function verseFwdBack () {
+		var html = '';
+		var history = Object.values(verseHistory);
+		for (let i=0; i<history.length; i++) {
+			if( isVerse( history[i].book, history[i].chap, history[i].verse ) ) {
+				// back link
+				if (i > 0) html += verseLink( history[i-1].book, history[i-1].chap, history[i-1].verse, leftArrow );
+				else html += grayedOut(leftArrow);
+				html += '&nbsp;';
+				// fwd link
+				if (i < history.length-1) html += verseLink( history[i+1].book, history[i+1].chap, history[i+1].verse, rightArrow );
+				else html += grayedOut(rightArrow);
+			}
+		}
+		return html;
+	}
+		
+	function wordFwdBack () {
+		var html = '';
+		var history = Object.keys(wordHistory);
+		for (let i=0; i<history.length; i++) {
+			if( isWord( history[i] ) ) {
+				// back link
+				if (i > 0) html += wordLink( history[i-1], leftArrow );
+				else html += grayedOut(leftArrow);
+				html += '&nbsp;';
+				// fwd link
+				if (i < history.length-1) html += wordLink( history[i+1], rightArrow );
+				else html += grayedOut(rightArrow);
+			}
+		}
+		return html;
+	}
+		
 	function wordInfo ( word ) {
 		var basic = basicWord( word );
 		var hash = wordHash( basic );
 		
 		// history
-		var html = '<table><tr><td colspan=2 class="highlighted">';
+		var html = '<table><tr><td class="top-td">'+wordFwdBack()+'</td><td class="top-td">';
 		var delim = '';
 		for (const [key, nullObj] of Object.entries(wordHistory)) {
 			html += delim+wordLink( key );
-			delim = '&nbsp; ';
+			delim = '&nbsp;<span style="color:lightgray;">|</span> ';
 		}
-		html += '</td></tr>';
+		html += '</td></tr></table>';
 
 		// word info
-		//var html = '<table>';
-		html += '<tr><td class="highlighted"><h1>'+basic+'</h1></td><td class="highlighted">'+strongsInfo( word )+'</td></tr>';
-		//html += '</table>';
+		html += '<table><tr><td class="highlighted"><h1>'+basic+'</h1></td><td class="highlighted">'+strongsInfo( word )+'</td></tr>';
+		html += '</table>';
 		
 		// word locations
-		//html += '<table>';
+		html += '<table>';
 		if (interlinear.data[hash]!==undefined && interlinear.data[hash][basic]!==undefined) {
 			for (const [book, bookObj] of Object.entries(interlinear.data[hash][basic])) {
 				html += '<tr><td>'+book+'</td><td>';
@@ -264,20 +429,15 @@
 				for (const [chap, chapObj] of Object.entries(bookObj)) {
 					for (const [verse, verseOjb] of Object.entries(chapObj)) {
 						let text = verseText( interlinear.text, book, chap, verse );
-						//console.log( text );
-						//html += '<tr><td>'+book+'</td><td>'+chap+"</td><td><a href=\"#\" onclick=\"changeVerse('"+book+"','"+chap+"','"+verse+"')\">"+verse+'</a></td><td>'+exactWord( text, basic )+'</td></tr>';
-						//html += delim+"<a href=\"#verseView\" onclick=\"changeVerse('"+book+"','"+chap+"','"+verse+"')\">"+chap+':'+verse+'</a>';
-						html += delim+verseLink( book, chap, verse );
-						delim = ' , ';
+						html += delim+verseLink( book, chap, verse, chap+':'+verse );
+						delim = '&nbsp; ';
 					}
 				}
 				html += '</td></tr>';
 			}
 		}
-		//html += '</table>';
 		
 		// sub-word info
-		//html += '<table>';
 		for (let sub of substringSet( basic )) {
 			let subHash = wordHash( sub );
 			if (interlinear.data[subHash]!==undefined && interlinear.data[subHash][sub]!==undefined) {
@@ -290,18 +450,38 @@
 	}
 	
 	function verseInfo ( book, chap, verse ) {
-		var html = '<table><tr><td colspan=2 class="highlighted">';
+		// verse history
+		var html = '<table>';
+		html += '<tr><td class="top-td">'+verseFwdBack()+'</td><td class="top-td">';
 		var delim = '';
 		for (const [key, verseObj] of Object.entries(verseHistory)) {
 			html += delim+verseLink( verseObj.book, verseObj.chap, verseObj.verse );
-			delim = '&nbsp; ';
+			delim = '&nbsp;<span style="color:lightgray;">|</span> ';
 		}
 		html += '</td></tr>';
+		html += '</table>';
+		
+		// translations
+		html += '<table>';
 		for (const [tCode, bibleObj] of Object.entries(interlinear.translations)) {
-			html += '<tr><td class="highlighted">'+tCode+'</td><td class="highlighted">'+verseText( bibleObj, book, chap, verse )+'</td></tr>';
+			let data = verseData( bibleObj, book, chap, verse );
+			html += '<tr><td class="highlighted">'+verseLink(data.prevVerse.book, data.prevVerse.chap, data.prevVerse.verse, upArrow)+'</td><td class="highlighted" style="text-align:center;color:gray;">'+verseText( bibleObj, data.prevVerse.book, data.prevVerse.chap, data.prevVerse.verse )+'</td></tr>';
+			html += '<tr><td class="highlighted"></td><td class="highlighted" style="text-align:center;">'+verseText( bibleObj, book, chap, verse )+'</td></tr>';
+			html += '<tr><td class="highlighted">'+verseLink(data.nextVerse.book, data.nextVerse.chap, data.nextVerse.verse, downArrow)+'</td><td class="highlighted" style="text-align:center;color:gray;">'+verseText( bibleObj, data.nextVerse.book, data.nextVerse.chap, data.nextVerse.verse )+'</td></tr>';
 		}
+		// original text
 		var text = verseText( interlinear.text, book, chap, verse );
-		for (let word of text.split(/\s+/)) {
+		var wordArray = text.split(/\s+/);
+		html += '<tr><td colspan=2 style="text-align:center;">';
+		for (let word of wordArray) {
+			html += ' '+wordLink( word );
+		}
+		html += '</td></tr>';
+		html += '</table>';
+		
+		// each word with Strongs info
+		html += '<table>';
+		for (let word of wordArray) {
 			html += '<tr><td>'+wordLink( word )+'</td><td>'+strongsInfo( word )+'</td></tr>';
 		}
 		html += '</table>';
@@ -330,9 +510,11 @@
 		// word input
 		var word = getVal( "word" );
 
-		// history
-		verseHistory[book+chap+verse] = { book:book, chap:chap, verse:verse };
-		wordHistory[word] = null;
+		// verse history
+		verseHistory[book+chap] = { book:book, chap:chap, verse:verse };
+		
+		// word history
+		wordHistory[basicWord(word)] = null;
 		
 		// refresh divs
 		getId( "verseDiv" ).innerHTML = verseInfo( book, chap, verse );
@@ -340,8 +522,8 @@
 	}
 	
 	refresh();
-	getId( "verseDiv" ).style.visibility = 'visible';
-	getId( "wordDiv" ).style.visibility = 'visible';
+	getId( "verseDivWrapper" ).style.visibility = 'visible';
+	getId( "wordDivWrapper" ).style.visibility = 'visible';
 	getId( "loadingDiv" ).style.visibility = 'hidden';
 
 </script>
