--- a/interlinear.html
+++ b/interlinear.html
@@ -36,7 +36,7 @@
 		padding:4px 0 4px 0;
 	}
 	input, select {
-		padding: 4px 0 4px 0;
+		padding: 4px 8px;
 		margin: 4px 0 4px 0;
 		display: inline-block;
 		border: 1px solid #ccc;
@@ -93,15 +93,15 @@
 	<div id="controlsDiv" style="max-width:100%;width:100%">
 	
 		<div class="controls-subdiv">
-		<select id="lang" onchange="changeLanguages();"></select>
+		&#x1F310;&nbsp;<select id="lang" onchange="changeLanguages();"></select>
 		</div>
 		
 		<div class="controls-subdiv">
-		<input id="book" onchange="refresh()" value="GEN" style="width:80px;">&nbsp;&nbsp;<input id="chap" onchange="refresh()" value="1" style="width:40px;">:<input id="verse" onchange="refresh()" value="1" style="width:40px;"> <br>
+		&#x1F4D6;&nbsp;<input id="book" onchange="changeBook(this.value);" value="GEN" style="width:80px;">&nbsp;&nbsp;<input id="chap" onchange="state.chap=this.value;refresh();" value="1" style="width:40px;">:<input id="verse" onchange="state.verse=this.value;refresh();" value="1" style="width:40px;"> <br>
 		</div>
 		
 		<div class="controls-subdiv">
-		<input id="word" onchange="refresh()" value="בְּרֵאשִׁ֖ית" style="width:120px;text-align:center">
+		<input id="word" onchange="changeWord(this.value);" value="בְּרֵאשִׁ֖ית" style="width:120px;text-align:center">
 		</div>
 	
 	</div>
@@ -122,6 +122,13 @@
 
 	const verseHistory = {};	
 	const wordHistory = {};
+	
+	const state = {
+		book:'GEN',
+		chap:'1',
+		verse:'1',
+		word:'בראשית'
+	};
 	
 	const rightArrow = '&nbsp;&#10093;&nbsp;';
 	const leftArrow = '&nbsp;&#10092;&nbsp;';
@@ -144,7 +151,7 @@
 		getId( id ).value = val;
 		return prev;
 	}
-	
+		
 	function basicChar ( c ) {
 		// check for substitute greek char
 		if ('άᾳᾴᾶᾷὰάἀἁἂἃἄἅἆᾄᾅ'.indexOf( c ) > -1) return 'α';
@@ -207,13 +214,18 @@
 	function last ( array ) {
 		return array[array.length-1];
 	}
+	
+	function something ( anything ) {
+		if (anything!==undefined && anything!=null && anything!=='') return true;
+		else return false;
+	}
 
 
 	// structural functions
 
 	function verseText ( bibleObj, book, chap, verse ) {
 		//console.log( 'verseText: '+book+','+chap+','+verse );
-		if (bibleObj!==undefined && bibleObj[book]!==undefined && bibleObj[book][chap]!==undefined) {
+		if (something( bibleObj ) && something( bibleObj[book] ) && something( bibleObj[book][chap] )) {
 			return bibleObj[book][chap][verse];
 		} else {
 			//return `[NOT FOUND: ${book} ${chap}:${verse}]`;
@@ -222,17 +234,17 @@
 	}
 	
 	function getBooks ( bibleObj ) {
-		if (bibleObj!==undefined) return Object.keys( bibleObj );
+		if (something( bibleObj )) return Object.keys( bibleObj );
 		else return [];
 	}
 	
 	function getChaps ( bibleObj, book ) {
-		if (bibleObj!==undefined && bibleObj[book]!==undefined) return Object.keys( bibleObj[book] );
+		if (something( bibleObj ) && something( bibleObj[book] )) return Object.keys( bibleObj[book] );
 		else return [];
 	}
 	
 	function getVerses ( bibleObj, book, chap ) {
-		if (bibleObj!==undefined && bibleObj[book]!==undefined && bibleObj[book][chap]!==undefined) return Object.keys( bibleObj[book][chap] );
+		if (something( bibleObj ) && something( bibleObj[book] ) && something( bibleObj[book][chap] )) return Object.keys( bibleObj[book][chap] );
 		else return [];
 	}
 	
@@ -247,14 +259,16 @@
 				break;
 			}
 		}
+		//console.log( 'prevBook: '+prevBook+', book: '+book+', nextBook: '+nextBook );
 		var chapNum = Number(chap);
 		var lastChapNum = Number(last(getChaps(bibleObj,book)));
 		var verseNum = Number(verse);
 		var lastVerseNum = Number(last(getVerses(bibleObj,book,chap)));
+		//console.log( 'chapNum: '+chapNum+', lastChapNum: '+lastChapNum+', verseNum: '+verseNum+', lastVerseNum: '+lastVerseNum );
 		
 		var data = {
-			prevVerse: { book:'', chap:'', verse:'' },
-			nextVerse: { book:'', chap:'', verse:'' }
+			prevVerse: { book:null, chap:null, verse:null },
+			nextVerse: { book:null, chap:null, verse:null }
 		};
 		
 		// next verse
@@ -265,23 +279,27 @@
 					data.nextVerse.book = '';
 					data.nextVerse.chap = '';
 					data.nextVerse.verse = '';
+					console.log( "NEXT: do nothing: "+data.nextVerse.book+','+data.nextVerse.chap+','+data.nextVerse.verse );
 				} else {
 					// otherwise next book
 					data.nextVerse.book = nextBook;
 					data.nextVerse.chap = '1';
 					data.nextVerse.verse = '1';
+					console.log( "NEXT: next book: "+data.nextVerse.book+','+data.nextVerse.chap+','+data.nextVerse.verse );
 				}
 			} else {
 				// otherwise next chapter
 				data.nextVerse.book = book;
 				data.nextVerse.chap = (chapNum+1).toString();
 				data.nextVerse.verse = '1';
+				console.log( "NEXT: next chap: "+data.nextVerse.book+','+data.nextVerse.chap+','+data.nextVerse.verse );
 			}
 		} else {
 			// otherwise next verse
 			data.nextVerse.book = book;
 			data.nextVerse.chap = chap;
 			data.nextVerse.verse = (verseNum+1).toString();
+			console.log( "NEXT: next verse: "+data.nextVerse.book+','+data.nextVerse.chap+','+data.nextVerse.verse );
 		}
 		
 		// prev verse
@@ -292,6 +310,7 @@
 					data.prevVerse.book = '';
 					data.prevVerse.chap = '';
 					data.prevVerse.verse = '';
+					console.log( "PREV: do nothing: "+data.prevVerse.book+','+data.prevVerse.chap+','+data.prevVerse.verse );
 				} else {
 					// otherwise prev book
 					let prevChap = last(getChaps(bibleObj,prevBook));
@@ -299,14 +318,16 @@
 					data.prevVerse.book = prevBook;
 					data.prevVerse.chap = prevChap;
 					data.prevVerse.verse = prevVerse;
+					console.log( "PREV: prev book: "+data.prevVerse.book+','+data.prevVerse.chap+','+data.prevVerse.verse );
 				}
 			} else {
 				// otherwise prev chapter
 				let prevChap = (chapNum-1).toString();
-				let prevVerse = last(getVerses(bibleObj,prevBook,prevChap));
+				let prevVerse = last(getVerses(bibleObj,book,prevChap));
 				data.prevVerse.book = book;
 				data.prevVerse.chap = prevChap;
 				data.prevVerse.verse = prevVerse;
+				console.log( "PREV: prev chap: "+data.prevVerse.book+','+data.prevVerse.chap+','+data.prevVerse.verse );
 			}
 		} else {
 			// otherwise prev verse
@@ -314,6 +335,7 @@
 			data.prevVerse.book = book;
 			data.prevVerse.chap = chap;
 			data.prevVerse.verse = prevVerse;
+			console.log( "PREV: prev chap: "+data.prevVerse.book+','+data.prevVerse.chap+','+data.prevVerse.verse );
 		}
 		
 		return data;
@@ -322,7 +344,7 @@
 	function exactWord ( text, basic ) {
 		//console.log( text );
 		var html = '';
-		if (text!==undefined) {
+		if (something( text )) {
 			for (let word of text.split(/\s+/)) {
 				if (basicWord( word )==basic) html += " <a href=\"#wordView\" onclick=\"changeWord('"+word+"')\">"+word+"</a>";
 			}
@@ -336,10 +358,10 @@
 		var basic = basicWord( word );
 		var hash = wordHash( basic );
 		var html = '<table>';
-		if (basicToCode[hash]!==undefined && basicToCode[hash][basic]!==undefined) {
+		if (something( basicToCode[hash] ) && something( basicToCode[hash][basic] )) {
 			for (const [code, codeObj] of Object.entries(basicToCode[hash][basic])) {
 				let codeHash = code.substring(0,3);
-				if (codeToReplacement[codeHash]!==undefined && codeToReplacement[codeHash][code]!==undefined) {
+				if (something( codeToReplacement[codeHash] ) && something( codeToReplacement[codeHash][code] )) {
 					for (const [rep, repObj] of Object.entries(codeToReplacement[codeHash][code])) {
 						html += "<tr><td style=\"font-size:0.7em;color:gray;\">"+code+"</td><td style=\"font-size:0.8em;\">"+rep+"</td></tr>";
 					}
@@ -351,17 +373,16 @@
 	}
 	
 	function isVerse ( book, chap, verse ) {
-		return ( langToCode(getVal("book"))==langToCode(book) && getVal("chap")==chap && getVal("verse")==verse );
+		//return ( langToCode(getVal("book"))==langToCode(book) && getVal("chap")==chap && getVal("verse")==verse );
+		return ( state.book==book && state.chap==chap && state.verse==verse );
 	}
 	
 	function isWord ( word ) {
-		return ( basicWord(getVal( "word" )) == basicWord(word) );
+		return ( state.word == basicWord(word) );
 	}
 	
 	function verseLink ( book, chap, verse, link ) {
-		console.log(book);
-		if (link==undefined) link = codeToLang(book)+'&nbsp;'+chap+':'+verse;
-		console.log(link);
+		if (!something( link )) link = codeToLang(book)+'&nbsp;'+chap+':'+verse;
 		if (isVerse( book, chap, verse ))
 			return `<a href="#verseView" onclick="changeVerse('${book}','${chap}','${verse}')" class="highlighted">${link}</a>`;
 		else
@@ -369,7 +390,7 @@
 	}
 	
 	function wordLink ( word, link ) {
-		if (link==undefined) link = word;
+		if (!something( link )) link = word;
 		if (isWord( word ))
 			return `<a href="#wordView" onclick="changeWord('${word}')" class="highlighted">${link}</a>`;
 		else
@@ -415,6 +436,8 @@
 	}
 		
 	function wordInfo ( word ) {
+		console.log( 'wordInfo: '+word );
+		
 		var basic = basicWord( word );
 		var hash = wordHash( basic );
 		
@@ -433,7 +456,7 @@
 		
 		// word locations
 		html += '<table>';
-		if (interlinear.data[hash]!==undefined && interlinear.data[hash][basic]!==undefined) {
+		if (something( interlinear.data[hash] ) && something( interlinear.data[hash][basic] )) {
 			for (const [book, bookObj] of Object.entries(interlinear.data[hash][basic])) {
 				html += '<tr><td>'+codeToLang(book)+'</td><td>';
 				let delim = '';
@@ -447,12 +470,13 @@
 				html += '</td></tr>';
 			}
 		}
-		
+		html += '</table>';
+		html += '<table>';
 		// sub-word info
 		for (let sub of substringSet( basic )) {
 			let subHash = wordHash( sub );
-			if (interlinear.data[subHash]!==undefined && interlinear.data[subHash][sub]!==undefined) {
-				html += "<tr><td><a href=\"#wordView\" onclick=\"changeWord('"+sub+"')\">"+sub+"</a></td><td>"+strongsInfo( sub )+"</td></tr>";
+			if (something( interlinear.data[subHash] ) && something( interlinear.data[subHash][sub] )) {
+				html += "<tr><td><a href=\"#wordView\" onclick=\"changeWord('"+sub+"')\">"+sub+"</a></td><td>"+gematria( sub )+"</td><td>"+strongsInfo( sub )+"</td></tr>";
 			}
 		}
 		html += '</table>';
@@ -461,6 +485,8 @@
 	}
 	
 	function verseInfo ( book, chap, verse ) {
+		console.log( 'verseInfo: '+book+','+chap+','+verse );
+
 		// verse history
 		var html = '<table>';
 		html += '<tr><td class="top-td">'+verseFwdBack()+'</td><td class="top-td">';
@@ -476,9 +502,9 @@
 		html += '<table>';
 		var lang = interlinear.translations[language];
 		let data = verseData( lang, book, chap, verse );
-		if (data.prevVerse.book!='') html += '<tr><td class="highlighted">'+verseLink(data.prevVerse.book, data.prevVerse.chap, data.prevVerse.verse, upArrow)+'</td><td class="highlighted" style="color:gray;">'+data.prevVerse.chap+':'+data.prevVerse.verse+'</td><td class="highlighted" style="color:gray;">'+verseText( lang, data.prevVerse.book, data.prevVerse.chap, data.prevVerse.verse )+'</td></tr>';
+		if (something(data.prevVerse.book)) html += '<tr><td class="highlighted">'+verseLink(data.prevVerse.book, data.prevVerse.chap, data.prevVerse.verse, upArrow)+'</td><td class="highlighted" style="color:gray;">'+data.prevVerse.chap+':'+data.prevVerse.verse+'</td><td class="highlighted" style="color:gray;">'+verseText( lang, data.prevVerse.book, data.prevVerse.chap, data.prevVerse.verse )+'</td></tr>';
 		html += '<tr><td class="highlighted">'+codeToLang(book)+'</td><td class="highlighted">'+chap+':'+verse+'</td><td class="highlighted" style="">'+verseText( lang, book, chap, verse )+'</td></tr>';
-		html += '<tr><td class="highlighted">'+verseLink(data.nextVerse.book, data.nextVerse.chap, data.nextVerse.verse, downArrow)+'</td><td class="highlighted" style="color:gray;">'+data.nextVerse.chap+':'+data.nextVerse.verse+'</td><td class="highlighted" style="color:gray;">'+verseText( lang, data.nextVerse.book, data.nextVerse.chap, data.nextVerse.verse )+'</td></tr>';
+		if (something(data.nextVerse.book)) html += '<tr><td class="highlighted">'+verseLink(data.nextVerse.book, data.nextVerse.chap, data.nextVerse.verse, downArrow)+'</td><td class="highlighted" style="color:gray;">'+data.nextVerse.chap+':'+data.nextVerse.verse+'</td><td class="highlighted" style="color:gray;">'+verseText( lang, data.nextVerse.book, data.nextVerse.chap, data.nextVerse.verse )+'</td></tr>';
 		
 		// original text
 		var text = verseText( interlinear.text, book, chap, verse );
@@ -493,21 +519,48 @@
 		// each word with Strongs info
 		html += '<table>';
 		for (let word of wordArray) {
-			html += '<tr><td>'+wordLink( word )+'</td><td>'+strongsInfo( word )+'</td></tr>';
+			html += '<tr><td>'+wordLink( word )+'</td><td>'+gematria( word )+'</td><td>'+strongsInfo( word )+'</td></tr>';
 		}
 		html += '</table>';
 		return html;
 	}
 	
+	function changeBook ( book ) {
+		changeVerse( book, state.chap, state.verse );
+	}
+	
 	function changeVerse ( book, chap, verse ) {
-		setVal( "book", codeToLang(book) );
-		setVal( "chap", chap );
-		setVal( "verse", verse );
+		console.log( 'changeVerse: '+book+','+chap+','+verse );
+		/*
+		if (something(book) && something(chap) && something(verse)) {
+			setVal( "book", codeToLang(book) );
+			setVal( "chap", chap );
+			setVal( "verse", verse );
+			refresh();
+		} else {
+			console.log( 'ERROR calling changeVerse('+book+','+chap+','+verse+')' );
+		}
+		*/
+		state.book = langToCode( book );
+		setVal( "book", codeToLang(state.book) );
+		
+		state.chap = chap;
+		state.verse = verse;
+		
 		refresh();
 	}
 
 	function changeWord ( word ) {
-		setVal( "word", word );
+		/*
+		if (something(word)) {
+			setVal( "word", word );
+			refresh();
+		} else {
+			console.log( 'ERROR calling changeVerse('+book+','+chap+','+verse+')' );
+		}*/
+		state.word = basicWord( word );
+		setVal( "word", state.word );
+		
 		refresh();
 	}
 	
@@ -515,7 +568,7 @@
 	//refreshing
 	
 	function refresh () {
-
+		/*
 		// verse inputs
 		var book = langToCode(getVal( "book" ));
 		var chap = getVal( "chap" );
@@ -523,18 +576,97 @@
 
 		// word input
 		var word = getVal( "word" );
-
+		*/
 		// verse history
-		verseHistory[book+chap] = { book:book, chap:chap, verse:verse };
+		verseHistory[state.book+state.chap] = { book:state.book, chap:state.chap, verse:state.verse };
 		
 		// word history
-		wordHistory[basicWord(word)] = null;
+		wordHistory[basicWord(state.word)] = null;
 		
 		// refresh divs
-		getId( "verseDiv" ).innerHTML = verseInfo( book, chap, verse );
-		getId( "wordDiv" ).innerHTML = wordInfo( word );
+		getId( "verseDiv" ).innerHTML = verseInfo( state.book, state.chap, state.verse );
+		getId( "wordDiv" ).innerHTML = wordInfo( state.word );
 	}
 	
+	// Greek and Hebrew gematria
+	
+	function gematria ( word ) {
+		basic = basicWord( word );
+		var value = 0;
+		var pass = 0;
+		
+		console.log( word );
+		// overall
+		for (let i=0; i<basic.length; i++) {
+			//console.log( 'pass: '+i+', char: '+basic[i] );
+		
+			// Greek
+			if ('Αα'.indexOf( basic[i] ) > -1) pass += 1;
+			if ('Bβ'.indexOf( basic[i] ) > -1) pass += 2;
+			if ('Γγ'.indexOf( basic[i] ) > -1) pass += 3;
+			if ('Δδ'.indexOf( basic[i] ) > -1) pass += 4;
+			if ('Εε'.indexOf( basic[i] ) > -1) pass += 5;
+			if ('ς' == basic[i]) pass += 6;
+			if ('Zζ'.indexOf( basic[i] ) > -1) pass += 7;
+			if ('Hη'.indexOf( basic[i] ) > -1) pass += 8;
+			if ('Θθ'.indexOf( basic[i] ) > -1) pass += 9;
+			if ('Iι'.indexOf( basic[i] ) > -1) pass += 10;
+			if ('Kκ'.indexOf( basic[i] ) > -1) pass += 20;
+			if ('Λλ'.indexOf( basic[i] ) > -1) pass += 30;
+			if ('Mμ'.indexOf( basic[i] ) > -1) pass += 40;
+			if ('Nν'.indexOf( basic[i] ) > -1) pass += 50;
+			if ('Ξξ'.indexOf( basic[i] ) > -1) pass += 60;
+			if ('Oο'.indexOf( basic[i] ) > -1) pass += 70;
+			if ('Pπ'.indexOf( basic[i] ) > -1) pass += 80;
+			if ('ϟϞ'.indexOf( basic[i] ) > -1) pass += 90;
+			if ('Ρρ'.indexOf( basic[i] ) > -1) pass += 100;
+			if ('Σσ'.indexOf( basic[i] ) > -1) pass += 200;
+			if ('Tτ'.indexOf( basic[i] ) > -1) pass += 300;
+			if ('Υυ'.indexOf( basic[i] ) > -1) pass += 400;
+			if ('Φφ'.indexOf( basic[i] ) > -1) pass += 500;
+			if ('Χχ'.indexOf( basic[i] ) > -1) pass += 600;
+			if ('Ψψ'.indexOf( basic[i] ) > -1) pass += 700;
+			if ('Ωω'.indexOf( basic[i] ) > -1) pass += 800;
+			if ('Ϡ' == basic[i]) pass += 900;
+			// Hebrew
+			if ('א' == basic[i]) pass += 1; // or 1000?;
+			if ('ב' == basic[i]) pass += 2;
+			if ('ג' == basic[i]) pass += 3;
+			if ('ד' == basic[i]) pass += 4;
+			if ('ה' == basic[i]) pass += 5;
+			if ('ו' == basic[i]) pass += 6;
+			if ('ז' == basic[i]) pass += 7;
+			if ('ח' == basic[i]) pass += 8;
+			if ('ט' == basic[i]) pass += 9;
+			if ('י' == basic[i]) pass += 10;
+			if ('כ' == basic[i]) pass += 20;
+			if ('ך' == basic[i]) {if (i<basic.length-1) pass+=20; else pass+=500;}
+			if ('ל' == basic[i]) pass += 30;
+			if ('ם' == basic[i]) pass += 40;
+			if ('מ' == basic[i]) {if (i<basic.length-1) pass+=40; else pass+=600;}
+			if ('נ' == basic[i]) pass += 50;
+			if ('ן' == basic[i]) {if (i<basic.length-1) pass+=50; else pass+=600;}
+			if ('ס' == basic[i]) pass += 60;
+			if ('ע' == basic[i]) pass += 70;
+			if ('פ' == basic[i]) pass += 80;
+			if ('ף' == basic[i]) {if (i<basic.length-1) pass+=80; else pass+=800;}
+			if ('צ' == basic[i]) pass += 90;
+			if ('ץ' == basic[i]) {if (i<basic.length-1) pass+=90; else pass+=900;}
+			if ('ק' == basic[i]) pass += 100;
+			if ('ר' == basic[i]) pass += 200;
+			if ('ש' == basic[i]) pass += 300;
+			if ('ת' == basic[i]) pass += 400;
+			
+			value += pass;
+
+			if (pass == 0) console.log( 'gematria (beginning): '+basic[i]+'" not found ('+i+')' );
+			console.log( 'gematria (beginning): "'+basic[i]+'='+pass+', total='+value+' ('+i+')' );
+			pass = 0;
+		}
+
+		//console.log( word.toUpperCase() );
+		return '<span style="font-size:0.8em;">'+value+'</span>';
+	}
 	
 	// languages
 	
@@ -543,27 +675,29 @@
 	const codes = {};
 	
 	function langToCode ( expression ) {
-		if (expression!==undefined && interlinear.aliases[language]!==undefined) {
+		if (expression=='') return expression;
+		if (something(expression) && something(interlinear.aliases[language])) {
 			for (const [alias, code] of Object.entries(interlinear.aliases[language])) {
-				if (alias.toLowerCase().indexOf( expression.toLowerCase() ) > -1) return code;
+				if (alias.toLowerCase().indexOf( expression.toLowerCase() ) > -1) {
+					return code;
+				}
 			}
-		} else {
-			return expression;
 		}
+		return expression;
 	}
 	
 	function codeToLang ( code ) {
-		if (codes[language]!==undefined && codes[language][code]!==undefined) {
+		if (code=='') return code;
+		if (something(codes[language]) && something(codes[language][code])) {
 			return codes[language][code];
-		} else {
-			return code;
 		}
+		return code;
 	}
 	
 	function changeLanguages () {
-		var prevCode = langToCode( getVal( "book" ) );
+		//var prevCode = langToCode( getVal( "book" ) );
 		language = getVal( "lang" );
-		setVal( "book", codeToLang( prevCode ) );
+		setVal( "book", codeToLang( state.book ) );
 		refresh();
 	}
 	
@@ -575,9 +709,19 @@
 	
 	for (const [lang, langObj] of Object.entries(interlinear.aliases)) {
 		codes[lang] = {};
-		for (const [alias, code] of Object.entries(langObj)) {
-			interlinear.aliases[lang][code] = code; // add codes to aliases too
-			codes[lang][code] = alias; // later values override
+		console.log( lang );
+		console.log( langObj );
+		if (something( langObj ) && typeof langObj === 'object') {
+			for (const [alias, code] of Object.entries(langObj)) {
+				interlinear.aliases[lang][code] = code; // add codes to aliases too
+				codes[lang][code] = alias; // later values override
+			}
+		} else {
+			interlinear.aliases[lang] = {};
+			for (const [alias, code] of Object.entries(interlinear.aliases.English)) {
+				interlinear.aliases[lang][code] = code; // add codes to aliases too
+				codes[lang][code] = alias; // later values override
+			}
 		}
 	}
 	
