--- a/interlinear.html
+++ b/interlinear.html
@@ -136,8 +136,8 @@
 	
 	const rightArrow = '&nbsp;&#10093;&nbsp;';
 	const leftArrow = '&nbsp;&#10092;&nbsp;';
-	const upArrow = '&nbsp;&#x1F781;&nbsp;';
-	const downArrow = '&nbsp;&#x1F783;&nbsp;';
+	const upArrow = '<span style="font-size:1.5em;">&nbsp;&#x2B06;&nbsp;</span>';
+	const downArrow = '<span style="font-size:1.5em;">&nbsp;&#x2B07;&nbsp;</span>';
 
 	// building-block functions
 
